--- a/main/geography/static/tpl/overview_tpl.html
+++ b/main/geography/static/tpl/overview_tpl.html
@@ -1,12 +1,12 @@
 <div class="overview">
-  <h1>Přehled znalostí {{user}}</h1>
+  <h1>{{'Přehled map' | trans}} {{user}}</h1>
   <div class="col-sm-offset-2 col-sm-8 overview-stats">
     <span class="level-progress-bar"></span>
   </div>
   <div ng-hide="mapCategories" class="loading-indicator">
   </div>
   <div class="map-categories" ng-repeat="c in mapCategories">
-      <h2 class="col-md-offset-1" ng-hide="c.name == 'Svět'"> {{c.name}}</h2>
+      <h2 class="col-md-offset-1" ng-hide="c.name == 'World'"> {{c.name}}</h2>
       <ul>
         <li class="overview-row" ng-repeat="map in c.maps">
           <h3 class="col-md-offset-1 col-sm-3"><a href="#/view/{{map.slug}}/{{user}}">{{map.name}}</a>
@@ -18,7 +18,7 @@
             <li class="inline-block" ng-repeat="layer in map.placesTypes" >
               <a href="#/practice/{{map.slug}}/{{layer.slug}}" 
                  class="btn btn-primary atooltip"
-                 title="Procvičovat">
+                 title="{{'Procvičovat'| trans}}">
                  {{layer.name}}</a>
               <div class="map-progress" count="{{layer.count}}" 
                    skills="{{mapSkills(map.slug, layer.slug)}}">
