Homepage texts English l10n. #92

--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -55,34 +55,32 @@
   </div>
 
 <div class="how-it-works">
-<h2>Jak to funguje?</h2>
+<h2>{{"Jak to funguje?" | trans }}</h2>
 <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-tower"></i> Zeměpis hrou</h3>
-Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím soutěžíte jen sami se sebou, respektive proti systému.
-Dokážete obarvit na zeleno celou mapu Evropy? Celou ČR? A co celý svět?
+<h3><i class="glyphicon glyphicon-tower"></i>{{"Zeměpis hrou" | trans }}</h3>
+{{"Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím soutěžíte jen sami se sebou, respektive proti systému. Dokážete obarvit na zeleno celou mapu Evropy? Celou ČR? A co celý svět?" | trans}}
 </div>
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-dashboard"></i> Adaptabilní procvičování</h3>
-Systém vás zkouší ze znalosti slepých map, přičemž chování systému je adaptabilní - podle toho, jaké máte vědomosti, aplikace volí podobu otázek (otevřená, výběr z možností) a frekvenci opakování.
-Aplikace vám tak předkládá státy, jejichž procvičení je pro vás nejužitečnější.
+<h3><i class="glyphicon glyphicon-dashboard"></i> {{"Adaptabilní procvičování" | trans}}</h3>
+{{"Systém vás zkouší ze znalosti slepých map, přičemž chování systému je adaptabilní - podle toho, jaké máte vědomosti, aplikace volí podobu otázek (otevřená, výběr z možností) a frekvenci opakování. Aplikace vám tak předkládá státy, jejichž procvičení je pro vás nejužitečnější." | trans}}
 </div>
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-picture"></i> Vizualizace znalostí</h3>
-Na základě odpovědí systém odhadne jak dobře znáte různé státy a znázorní vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte.
+<h3><i class="glyphicon glyphicon-picture"></i> {{"Vizualizace znalostí" | trans}}</h3>
+{{"Na základě odpovědí systém odhadne jak dobře znáte různé státy a znázorní vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte." | trans}}
 </div>
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-globe"></i> Specializovaný systém</h3>
-Procvičování slepých map nabízí i řada jiných výukových systémů, ty však většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný.
+<h3><i class="glyphicon glyphicon-globe"></i> {{"Specializovaný systém" | trans}}</h3>
+{{"Procvičování slepých map nabízí i řada jiných výukových systémů, ty však většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný." | trans}}
 </div>
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-stats"></i> Učení z dat</h3>
-Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto datech, nikoliv na znalostech experta na zeměpis, který "ví", jestli je těžší poznat Keňu nebo Nigérii.
+<h3><i class="glyphicon glyphicon-stats"></i> {{"Učení z dat" | trans}}</h3>
+{{'Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto datech, nikoliv na znalostech experta na zeměpis, který "ví", jestli je těžší poznat Keňu nebo Nigérii.' | trans}}
 </div>
 </div>
 <div class="clearfix"></div>
