Fix some design issues

--- a/main/geography/static/tpl/overview_tpl.html
+++ b/main/geography/static/tpl/overview_tpl.html
@@ -17,7 +17,7 @@
           <ul class="col-sm-9 col-md-7 inline">
             <li class="inline-block" ng-repeat="layer in map.placesTypes" >
               <a href="#/practice/{{map.slug}}/{{layer.slug}}" 
-                 class="btn btn-primary atooltip"
+                 class="btn btn-primary"
                  title="{{'Procvičovat'| trans}}">
                  {{layer.name}}</a>
               <div class="map-progress" count="{{layer.count}}" 
