--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -26,7 +26,7 @@
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <div class="flatblock-content">{{ "Co chcete procvičovat?" | trans }}
         </div>
-          <a href="#/practice/world/state" class="btn btn-primary btn-lg btn-huge" >
+          <a href="#/practice/world/state" class="btn btn-default btn-lg btn-huge" >
             {{"Státy světa" | trans }}
           </a>
           <a href="#/practice/europe/state" class="btn btn-default btn-lg btn-huge" >
