User profile: share buttons

--- a/main/geography/static/tpl/user_tpl.html
+++ b/main/geography/static/tpl/user_tpl.html
@@ -19,6 +19,22 @@
     <a href="#/overview/{{user.username}}">
       {{'Přehled znalostí uživatele' | trans}} {{ user.username}}
     </a>
+    <div ng-show="editRights">
+      <br>
+      <h4>{{'Sdílejte svůj profil' | trans }}</h4>
+      <div my-fb-share="" data-type="button" data-href="{{profileUrl}}"></div>
+      <!-- Place this tag where you want the share button to render. -->
+      <span class="g-plus-wrapper">
+        <div my-google-plus="" data-action="share"
+          data-annotation="none" data-height="24">
+        </div>
+      </span>
+      <input type="text" value="{{profileUrl}}" class="share-input"
+        tooltip-placement="right"
+        tooltip="{{'Adresa profilu' | trans}}"/>
+
+    </div>
+
     <h2>
       {{'Osobní cíle' | trans }}
       <i ng-click="addGoal()" ng-show="editRights"
