--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -15,7 +15,7 @@
   <!--
  {% load i18n %}
     -->
-  <div ng-if="language_code=='en'" class="ng-cloak">
+  <div ng-if="LANGUAGE_CODE=='en'" class="ng-cloak">
     <div class="alert alert-danger old-browser">
       Please, note that English localization of this app is work in progress. 
       There are some parts that haven't been translated, yet.
@@ -66,16 +66,20 @@
 <div class="works-div">
 <h3><i class="glyphicon glyphicon-dashboard"></i> {{"Adaptabilní procvičování" | trans}}</h3>
 {{"Adaptabilní procvičování - text" | trans}}
-</div>
-
-<div class="works-div">
-<h3><i class="glyphicon glyphicon-picture"></i> {{"Vizualizace znalostí" | trans}}</h3>
-{{"Vizualizace znalostí - text" | trans}}
+  <img src="/static/img/practice-example-{{LANGUAGE_CODE}}.png"
+    alt="{{'Ukázka procvičování' | trans}}"/>
 </div>
 
 <div class="works-div">
 <h3><i class="glyphicon glyphicon-globe"></i> {{"Specializovaný systém" | trans}}</h3>
 {{"Specializovaný systém - text" | trans}}
+</div>
+
+<div class="works-div">
+  <h3><i class="glyphicon glyphicon-picture"></i> {{"Vizualizace znalostí" | trans}}</h3>
+  {{"Vizualizace znalostí - text" | trans}}
+  <img src="/static/img/knowledge-map.png"
+    alt="{{'Ukázka mapy znalostí' | trans}}"/>
 </div>
 
 <div class="works-div">
