homepage texts changed for SEO

--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -24,7 +24,7 @@
   <div class="welcome-page jumbotron">
       <h1 >{{ "Slepé Mapy"|trans }}</h1>
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
-        <div class="flatblock-content">{{ "Co chcete procvičovat?" | trans }}
+        <div class="flatblock-content">{{ "Kterou mapu chcete procvičovat?" | trans }}
         </div>
           <a href="#/practice/world/state" class="btn btn-default btn-lg btn-huge" >
             {{"Státy světa" | trans }}
@@ -45,7 +45,8 @@
             {{"Pohoří Evropy" | trans }}
           </a>
         <div class="flatblock-content">
-          ... <a href="#/overview/">{{"nebo něco jiného" | trans }}</a>?
+          ...{{"nebo některou z" | trans }} 
+          <a href="#/overview/">{{"dalších map" | trans }}</a>?
         </div>
         <div class="plugins-social">
           <div class="g-plusone" data-size="medium"></div>
