Added link to umimecesky.cz

--- a/main/geography/static/tpl/about.html
+++ b/main/geography/static/tpl/about.html
@@ -9,9 +9,18 @@
     Slepé mapy jsou vyvíjeny na <a href="http://www.fi.muni.cz/">
     Fakultě informatiky Masarykovy univerzity</a>, 
     konkrétně v rámci skupiny <a href="http://www.fi.muni.cz/~xpelanek/proso/">PROSO</a>. 
-    Mezi předchozí projekty této skupiny patří například 
-    <a href="http://tutor.fi.muni.cz/">Problem Solving Tutor</a>.
     </p>
+    <p>
+    Mezi další projekty této skupiny patří:
+    </p>
+    <ul>
+      <li>
+        <a href="http://tutor.fi.muni.cz/">Problem Solving Tutor</a>,
+      </li>
+      <li>
+        <a href="http://umimecesky.cz/">Umíme česky</a>.
+      </li>
+    </ul>
 
     <p>
     Na vývoji Slepých map se podílí především Vít Stanislav a Jan Papoušek.
