homepage: make stronger call for action

--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -24,9 +24,9 @@
   <div class="welcome-page jumbotron">
       <h1 >{{ "Slepé Mapy"|trans }}</h1>
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
-        <div class="flatblock-content">{{ "Kterou mapu chcete procvičovat?" | trans }}
+        <div class="flatblock-content">{{ "Vyberte si mapu k procvičování:" | trans }}
         </div>
-          <a href="#/practice/world/state" class="btn btn-default btn-lg btn-huge" >
+          <a href="#/practice/world/state" class="btn btn-primary btn-lg btn-huge" >
             {{"Státy světa" | trans }}
           </a>
           <a href="#/practice/europe/state" class="btn btn-default btn-lg btn-huge" >
@@ -45,8 +45,8 @@
             {{"Pohoří Evropy" | trans }}
           </a>
         <div class="flatblock-content">
-          ...{{"nebo některou z" | trans }} 
-          <a href="#/overview/">{{"dalších map" | trans }}</a>?
+          {{"Chcete jinou? Podívejte se na" | trans }} 
+          <a href="#/overview/">{{"další mapy" | trans }}</a>.
         </div>
         <div class="plugins-social">
           <div class="g-plusone" data-size="medium"></div>
