Fix issue with angular braces in img src

--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -61,7 +61,7 @@
 <div class="works-div">
 <h3><i class="glyphicon glyphicon-dashboard"></i> {{"Adaptabilní procvičování" | trans}}</h3>
 {{"Adaptabilní procvičování - text" | trans}}
-  <img src="/static/img/practice-example-{{LANGUAGE_CODE}}.png"
+  <img ng-src="/static/img/practice-example-{{LANGUAGE_CODE}}.png"
     alt="{{'Ukázka procvičování' | trans}}"/>
 </div>
 
