--- a/main/geography/static/tpl/confused_tpl.html
+++ b/main/geography/static/tpl/confused_tpl.html
@@ -1,19 +1,24 @@
 <div class="overview">
-  <div class="col-sm-offset-2 col-sm-8">
-    <h1>{{'Časté chyby' |trans }}</h1>
+  <div class="col-md-offset-2 col-md-8">
+    <h1>{{'Moje chyby' |trans }}</h1>
     <div ng-hide="loaded" class="loading-indicator">
     </div>
     <div class="alert alert-info" ng-show="goals.length === 0">
       {{'Žádné často zaměňované nebyly nalezeny' | trans }}
     </div>
-    <div ng-repeat="place in confused | orderBy: 'mistake_count' | orderBy: 'wrongRatio' : true" class="confused">
-      <span class="col-xs-4">
+    <div ng-repeat="place in confused | orderBy: 'mistake_count' | orderBy:
+    'wrongRatio' : true" class="row confused">
+      <span class="col-sm-3">
         <span class="label label-default">
           <i class="flag-{{place.code}}"></i>
           {{place.name}}
         </span>
       </span>
-      <span class="col-xs-8">
+      <span class="col-sm-9">
+        <a href="/practice/{{place.map_slug}}/{{place.type}}"
+           class="btn btn-primary btn-sm pull-right">
+           {{'Procvičovat' | trans }}
+        </a>
         <div class="progress">
           <span style="width: {{(1 - place.wrongRatio) * 100}}%"
             tooltip="{{'Správné odpovědi' | trans }}"
