--- a/main/geography/static/tpl/confused_tpl.html
+++ b/main/geography/static/tpl/confused_tpl.html
@@ -7,7 +7,7 @@
       {{'Žádné často zaměňované nebyly nalezeny' | trans }}
     </div>
     <div ng-repeat="place in confused | orderBy: 'mistake_count' | orderBy:
-    'wrongRatio' : true" class="row confused">
+    'wrongRatio' : true" class="row striped-row confused">
       <span class="col-sm-3">
         <span class="label label-default">
           <i class="flag-{{place.code}}"></i>
@@ -15,18 +15,21 @@
         </span>
       </span>
       <span class="col-sm-9">
-        <a href="/practice/{{place.map_slug}}/{{place.type}}"
+        <a href="#/practice/{{place.map_slug}}/{{place.type}}"
+           tooltip="{{place.map_name}} - {{place.type_name}}"
            class="btn btn-primary btn-sm pull-right">
            {{'Procvičovat' | trans }}
         </a>
         <div class="progress">
           <span style="width: {{(1 - place.wrongRatio) * 100}}%"
             tooltip="{{'Správné odpovědi' | trans }}"
+            tooltip-append-to-body="true"
             class="progress-bar progress-bar-success">
               {{place.asked_count - place.mistake_count}}
           </span>
           <span style="width: {{place.wrongRatio * 100}}%"
             tooltip="{{'Nesprávné odpovědi' | trans }}"
+            tooltip-append-to-body="true"
             class="progress-bar progress-bar-danger">
             {{place.mistake_count}}
           </span>
