Turn on HTML5 history API in AngularJS locationProvider

--- a/main/geography/static/tpl/user_tpl.html
+++ b/main/geography/static/tpl/user_tpl.html
@@ -1,4 +1,4 @@
-<div class="overview">
+<div class="overview profile">
   <div class="col-sm-offset-2 col-sm-8">
     <h1>{{user.username}}</h1>
     <div class="level-progress-bar" username="{{user.username}}"></div>
