--- a/main/geography/static/tpl/practice_tpl.html
+++ b/main/geography/static/tpl/practice_tpl.html
@@ -14,7 +14,7 @@
         <i class="flag-{{question.asked_code}}"></i> {{question.place}}
       </span>
       <span ng-show="question.answered_code && (question|isFindOnMapType) && question.answered_code != question.asked_code">
-        <span>Vybráno </span>
+        <span>{{'Vybráno' | trans }}</span>
         <span class="label label-default">
           <i class="flag-{{question.answered_code}}"></i> {{question.answered_code|codeToName}}
         </span>
