--- a/main/geography/static/tpl/practice_tpl.html
+++ b/main/geography/static/tpl/practice_tpl.html
@@ -7,87 +7,91 @@
   </div>
   <div ng-show="error" ng-bind="error" class="alert alert-danger">
   </div>
-  <div ng-show="question != undefined && !showSummary" class="practice">
-    <div class="question">
-      <span ng-bind="question.text"></span>
-      <span class="label label-default" ng-show="question|isFindOnMapType">
-        <i class="flag-{{question.asked_code}}"></i> {{question.place}}
-      </span>
-      <span ng-show="question.answered_code && (question|isFindOnMapType) && question.answered_code != question.asked_code">
-        <span>{{'Vybráno' | trans }}</span>
-        <span class="label label-default">
-          <i class="flag-{{question.answered_code}}"></i> {{question.answered_code|codeToName}}
+  <div class="practice">
+    <div ng-repeat="question in questions"
+        ng-class="{'slide-out': question.slideOut}"
+        class="inner-practice">
+      <div class="question">
+        <span ng-bind="question.text"></span>
+        <span class="label label-default" ng-show="question|isFindOnMapType">
+          <i class="flag-{{question.asked_code}}"></i> {{question.place}}
+        </span>
+        <span ng-show="question.answered_code && (question|isFindOnMapType) && question.answered_code != question.asked_code">
+          <span>{{'Vybráno' | trans }}</span>
+          <span class="label label-default">
+            <i class="flag-{{question.answered_code}}"></i> {{question.answered_code|codeToName}}
+          </span>
+        </span>
+        <br class="clearfix">
+      </div>
+      <span class="col-sm-7">
+        <span ng-show="question|isPickNameOfType">
+          <button ng-repeat="place in question.options"
+            class="btn btn-lg btn-default"
+            ng-click="checkAnswer(place.code)"
+            ng-class="{'btn-success': place.correct, 'btn-danger': place.selected && !place.correct }"
+            ng-disabled="place.disabled">
+             <i class="flag-{{place.code}}"></i> {{place.name}}
+          </button>
         </span>
       </span>
-      <br class="clearfix">
-    </div>
-    <span class="col-sm-7">
-      <span ng-show="question|isPickNameOfType">
-        <button ng-repeat="place in question.options"
-          class="btn btn-lg btn-default"
-          ng-click="checkAnswer(place.code)"
-          ng-class="{'btn-success': place.correct, 'btn-danger': place.selected && !place.correct }"
-          ng-disabled="place.disabled">
-           <i class="flag-{{place.code}}"></i> {{place.name}}
+      <span class="col-sm-5" >
+        <button class="btn btn-lg btn-default dont-know" 
+                ng-click="checkAnswer()" 
+                ng-disabled="canNext" >
+            <i class="glyphicon glyphicon-question-sign"></i> {{'Nevím' | trans }}
+        </button>
+        <button class="btn btn-lg btn-default next {{!canNext || 'btn-primary'}}" 
+                ng-click="next()" 
+                ng-disabled="!canNext" >
+            <i class="glyphicon glyphicon-arrow-right"></i> {{'Pokračovat' | trans }}
+        </button>
+        <button class="btn btn-lg btn-default" 
+                ng-click="highlight()" 
+                ng-disabled="canNext"  
+                ng-show="question.options != undefined" >
+            <i class="glyphicon glyphicon-repeat"></i> {{'Znovu zvýraznit' | trans }}
         </button>
       </span>
-    </span>
-    <span class="col-sm-5" >
-      <button class="btn btn-lg btn-default dont-know" 
-              ng-click="checkAnswer()" 
-              ng-disabled="canNext" >
-          <i class="glyphicon glyphicon-question-sign"></i> {{'Nevím' | trans }}
-      </button>
-      <button class="btn btn-lg btn-default next {{!canNext || 'btn-primary'}}" 
-              ng-click="next()" 
-              ng-disabled="!canNext" >
-          <i class="glyphicon glyphicon-arrow-right"></i> {{'Pokračovat' | trans }}
-      </button>
-      <button class="btn btn-lg btn-default" 
-              ng-click="highlight()" 
-              ng-disabled="canNext"  
-              ng-show="question.options != undefined" >
-          <i class="glyphicon glyphicon-repeat"></i> {{'Znovu zvýraznit' | trans }}
-      </button>
-    </span>
-  </div>
-  <div ng-show="showSummary" class="summary col-lg-12">
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="summary-progress progress" ng-show="summary != undefined">
-          <div class="progress-bar progress-bar-learned" 
-               style="width: {{summary.correctlyAnsweredRatio | percent }};">
-            {{'Úspěšnost' | trans}}: {{summary.correctlyAnsweredRatio | percent }}
-          </div>
-          <div class="progress-bar progress-bar-unlearned" 
-               style="width: {{(1 - summary.correctlyAnsweredRatio) | percent }};">
+    </div>
+    <div ng-if="showSummary" class="inner-practice summary col-lg-12">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="summary-progress progress" ng-show="summary != undefined">
+            <div class="progress-bar progress-bar-learned" 
+                 style="width: {{summary.correctlyAnsweredRatio | percent }};">
+              {{'Úspěšnost' | trans}}: {{summary.correctlyAnsweredRatio | percent }}
+            </div>
+            <div class="progress-bar progress-bar-unlearned" 
+                 style="width: {{(1 - summary.correctlyAnsweredRatio) | percent }};">
+            </div>
           </div>
         </div>
+        <div class="col-sm-6">
+          <div class="level-progress-bar"></div>
+        </div>
+        <h2 class="clearfix" ng-show="errorMessage != undefined" ng-bind="errorMessage"></h2>
+        <div class="col-sm-12">
+          <span ng-repeat="q in summary.questions" 
+                ng-click="map.highlightState(q.asked_code)"
+                class="label {{q.asked_code != q.answered_code &&
+                  'label-unlearned' || 'label-learned' }} ">
+            <i class="flag-{{q.asked_code}}"></i> {{q.place}}
+          </span>
+        </div>
       </div>
-      <div class="col-sm-6">
-        <div class="level-progress-bar"></div>
-      </div>
-      <h2 class="clearfix" ng-show="errorMessage != undefined" ng-bind="errorMessage"></h2>
-      <div class="col-sm-12">
-        <span ng-repeat="q in summary.questions" 
-              ng-click="map.highlightState(q.asked_code)"
-              class="label {{q.asked_code != q.answered_code &&
-                'label-unlearned' || 'label-learned' }} ">
-          <i class="flag-{{q.asked_code}}"></i> {{q.place}}
-        </span>
-      </div>
+      <br>
+      <span class="pull-right" >
+        <a class="btn btn-lg btn-default" 
+           href="#/refreshpractice/{{part}}/{{placeType}}" >
+          <i class="glyphicon glyphicon-repeat"></i> {{'Znovu procvičovat' | trans }}
+        </a>
+        <a class="btn-continue btn btn-lg btn-default {{!showSummary || 'btn-primary'}}" 
+           href="#/view/{{part}}/" >
+          <i class="glyphicon glyphicon-globe"></i> {{'Mapa znalostí' | trans }}
+        </a>
+      </span>
     </div>
-    <br>
-    <span class="pull-right" >
-      <a class="btn btn-lg btn-default" 
-         href="#/refreshpractice/{{part}}/{{placeType}}" >
-        <i class="glyphicon glyphicon-repeat"></i> {{'Znovu procvičovat' | trans }}
-      </a>
-      <a class="btn-continue btn btn-lg btn-default {{!showSummary || 'btn-primary'}}" 
-         href="#/view/{{part}}/" >
-        <i class="glyphicon glyphicon-globe"></i> {{'Mapa znalostí' | trans }}
-      </a>
-    </span>
   </div>
   <div class="clearfix"></div>
 </div>
