--- a/main/geography/static/tpl/user_tpl.html
+++ b/main/geography/static/tpl/user_tpl.html
@@ -77,25 +77,7 @@
         <h3>{{goal.map.name}} - {{goal.type.name}}
         </h3>
         <div class="clearfix"></div>
-        <div>
-          <span class="pull-left start-date"> {{goal.start_date | date}} </span>
-          <span class="pull-right finish-date"> {{goal.finish_date | date}} </span>
-          <div class="progress"
-              tooltip-placement="bottom"
-              tooltip="{{'Postup plnění cíle' | trans }}">
-            <span style="width: {{goal.progress|percent}}"
-              tooltip="{{'Splněno' | trans }}"
-              class="progress-bar progress-bar-learned"></span>
-            <span style="width: {{goal.progress_diff|percent}}"
-              ng-show="goal.needs_practice && !goal.behind_schedule"
-              tooltip="{{'Dnešní nesplněné procvičování' | trans }}"
-              class="progress-bar progress-bar-warning"></span>
-            <span style="width: {{goal.progress_diff|percent}}"
-              ng-show="goal.behind_schedule"
-              tooltip="{{'Více než den nesplněného procvičování' | trans }}"
-              class="progress-bar progress-bar-unlearned"></span>
-          </div>
-        </div>
+        <div goal-progress></div>
       </li>
     </ul>
   </div>
