--- a/main/geography/static/tpl/view_tpl.html
+++ b/main/geography/static/tpl/view_tpl.html
@@ -4,28 +4,31 @@
   </div>
   <div ng-show="error" ng-bind="error" class="alert alert-danger">
   </div>
-  <ul ng-show="placesTypes.length && (filteredTypes = (placesTypes|isTypeCategory:typeCat)).length" 
-      class="thumbnails fade-show-hide"
-      ng-repeat="typeCat in typeCategories">
-    <div ng-click="updateCat(typeCat)"
-        class="collapse-control"
-        ng-show="filteredTypes.length > 0 && placesTypes.length > 1">
-      <h2>
-        <i class="glyphicon {{typeCat.hidden && 'glyphicon-plus-sign' || 'glyphicon-minus-sign'}}"></i>
-        {{typeCat.name}}
-      </h2>
+  <div ng-show="placesTypes.length" class="layers-tabs">
+    <div class="tab col-sm-{{(typeCategories | filter:{'empty' : false}).length|colNum}}"
+        ng-class="{'active' : !typeCat.hidden}"
+        ng-repeat="typeCat in typeCategories" 
+        ng-hide="typeCat.empty = ((placesTypes|isTypeCategory:typeCat).length == 0)"
+        ng-click="typeCat.hidden && updateCat(typeCat)">
       <a href="#/practice/{{part}}/{{typeCat.slug}}" 
          class="btn btn-primary pull-right" 
          ng-hide="typeCat.hidden || filteredTypes.length == 1" >
         <i class="glyphicon glyphicon-check"></i> {{'Procvičovat' | trans }}
       </a>
-      <div class="clearfix"></div>
+      <h2>
+        {{typeCat.name}}
+      </h2>
     </div>
+    <div class="clearfix"></div>
+  </div>
+  <ul ng-show="placesTypes.length && (filteredTypes = (placesTypes|isTypeCategory:typeCat)).length" 
+      class="thumbnails fade-show-hide"
+      ng-repeat="typeCat in typeCategories">
     <div collapse="typeCat.hidden">
       <li class="col-sm-{{filteredTypes.length|colNum}}" 
           ng-repeat="type in filteredTypes">
         <div ng-click="updateMap(type)"
-            class="collapse-control collapse-control-inner">
+            class="collapse-control">
           <h3>
             <i class="glyphicon {{type.hidden && 'glyphicon-plus-sign' || 'glyphicon-minus-sign'}}"></i>
             {{type.name}}
