Personal goals page

--- a/main/geography/static/tpl/user_tpl.html
+++ b/main/geography/static/tpl/user_tpl.html
@@ -38,48 +38,7 @@
         tooltip="{{'Adresa profilu' | trans}}"/>
 
     </div>
-
-    <h2>
-      {{'Osobní cíle' | trans }}
-      <i class="glyphicon glyphicon-question-sign"
-         popover-title="{{'Chceš se naučit některou mapu do určitého data?'| trans}}"
-         popover="{{'Nastav si cíl a systém ti podle tvých aktuálních znalostí rozloží procvičování na jednotlivé dny.' | trans }}"
-         popover-append-to-body="true"
-         popover-trigger="mouseenter click"></i>
-      <i ng-click="addGoal()" ng-show="editRights"
-         tooltip="{{'Vytvořit cíl' | trans }}"
-         class="pull-right glyphicon glyphicon-plus-sign"></i>
-    </h2>
-    <div ng-hide="loaded" class="loading-indicator">
-    </div>
-    <div class="alert alert-info" ng-show="goals.length === 0">
-      {{'Žádné cíle zatím nebyly stanoveny' | trans }}
-    </div>
-    <ul>
-      <li ng-repeat="goal in goals" class="goal striped-row">
-          <span class="btn-group pull-right" ng-show="editRights">
-            <a href="#/practice/{{goal.map.code}}/{{goal.type.slug}}" 
-               tooltip="{{'Dnes již není třeba procvičovat' | trans}}"
-               tooltip-trigger="{{ goal.needs_practice ? 'none' : 'mouseenter'}}" 
-               tooltip-append-to-body="true"
-               class="btn btn-primary">
-               <i class="glyphicon glyphicon-check"></i> 
-               {{'Procvičovat'| trans}}</a>
-            <a ng-click="deleteGoal(goal)"
-               ng-disabled="!goal.can_be_deleted"
-               tooltip="{{'Odstranit cíl - lze jen v den jeho vytvoření' | trans}}"
-               tooltip-append-to-body="true"
-               class="btn btn-default">
-               <i ng-hide="goal.deleting" class="glyphicon glyphicon-trash"></i> 
-               <i ng-show="goal.deleting" class="icon-loading"></i> 
-            </a>
-           </span>
-        <h3>{{goal.map.name}} - {{goal.type.name}}
-        </h3>
-        <div class="clearfix"></div>
-        <div goal-progress></div>
-      </li>
-    </ul>
+    <div personal-goals></div>
   </div>
   <div class="clearfix"></div>
 </div>
