--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -20,23 +20,23 @@
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <div class="flatblock-content">{{ "Vyberte si mapu k procvičování:" | trans }}
         </div>
-          <a href="#/practice/world/state" class="btn btn-primary btn-lg btn-huge" >
-            {{"Státy světa" | trans }}
-          </a>
-          <a href="#/practice/europe/state" class="btn btn-default btn-lg btn-huge" >
+          <a href="#/practice/europe/state" class="btn btn-primary btn-lg btn-huge" >
             {{"Státy Evropy" | trans }}
+          </a>
+          <a href="#/practice/cz/river" class="btn btn-default btn-lg btn-huge" >
+            {{"Řeky ČR" | trans }}
           </a>
           <a href="#/practice/us/state" class="btn btn-default btn-lg btn-huge" >
             {{"Státy USA" | trans }}
           </a>
-          <a href="#/practice/cz/region_cz" class="btn btn-default btn-lg btn-huge" >
-            {{"Kraje ČR" | trans }}
+          <a href="#/practice/cz/mountains" class="btn btn-default btn-lg btn-huge" >
+            {{"Pohoří ČR" | trans }}
           </a>
-          <a href="#/practice/cz/city" class="btn btn-default btn-lg btn-huge" >
-            {{"Města ČR" | trans }}
+          <a href="#/practice/asia/state" class="btn btn-default btn-lg btn-huge" >
+            {{"Státy Asie" | trans }}
           </a>
-          <a href="#/practice/europe/mountains" class="btn btn-default btn-lg btn-huge" >
-            {{"Pohoří Evropy" | trans }}
+          <a href="#/practice/africa/river" class="btn btn-default btn-lg btn-huge" >
+            {{"Řeky Afriky" | trans }}
           </a>
         <div class="flatblock-content">
           {{"Chcete jinou? Podívejte se na" | trans }} 
