--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -20,27 +20,41 @@
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <div class="flatblock-content">{{ "Vyberte si mapu k procvičování:" | trans }}
         </div>
-          <a href="#/practice/europe/state" class="btn btn-primary btn-lg btn-huge" >
+          <a href="#/practice/europe/state"
+            class="btn btn-primary btn-lg btn-huge" 
+            track-click="homepage practice" >
             {{"Státy Evropy" | trans }}
           </a>
-          <a href="#/practice/cz/river" class="btn btn-default btn-lg btn-huge" >
+          <a href="#/practice/cz/river"
+            class="btn btn-default btn-lg btn-huge" 
+            track-click="homepage practice" >
             {{"Řeky ČR" | trans }}
           </a>
-          <a href="#/practice/us/state" class="btn btn-default btn-lg btn-huge" >
+          <a href="#/practice/us/state" 
+            class="btn btn-default btn-lg btn-huge" 
+            track-click="homepage practice" >
             {{"Státy USA" | trans }}
           </a>
-          <a href="#/practice/cz/mountains" class="btn btn-default btn-lg btn-huge" >
+          <a href="#/practice/cz/mountains" 
+            class="btn btn-default btn-lg btn-huge" 
+            track-click="homepage practice" >
             {{"Pohoří ČR" | trans }}
           </a>
-          <a href="#/practice/asia/state" class="btn btn-default btn-lg btn-huge" >
+          <a href="#/practice/asia/state" 
+            class="btn btn-default btn-lg btn-huge" 
+            track-click="homepage practice" >
             {{"Státy Asie" | trans }}
           </a>
-          <a href="#/practice/africa/river" class="btn btn-default btn-lg btn-huge" >
+          <a href="#/practice/africa/river" 
+            class="btn btn-default btn-lg btn-huge" 
+            track-click="homepage practice" >
             {{"Řeky Afriky" | trans }}
           </a>
         <div class="flatblock-content">
           {{"Chcete jinou? Podívejte se na" | trans }} 
-          <a href="#/overview/">{{"další mapy" | trans }}</a>.
+          <a href="#/overview/"
+            track-click="homepage practice" >
+            {{"další mapy" | trans }}</a>.
         </div>
         <div class="plugins-social">
           <div class="g-plusone" data-size="medium"></div>
