--- a/main/geography/static/tpl/about.html
+++ b/main/geography/static/tpl/about.html
@@ -1,14 +1,17 @@
-<div class="how-it-works">
+<div class="how-it-works about">
 <h2>O projektu</h2>
 <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
 
   <div class="works-div">
     <h3>Kdo za tím stojí</h3>
 
+    <a href="http://www.fi.muni.cz/adaptivelearning/" class="pull-right al-logo">
+      <img src="/static/img/al-logo.png" alt="Adaptive Learning logo"/>
+    </a>
     <p>
     Slepé mapy jsou vyvíjeny na <a href="http://www.fi.muni.cz/">
     Fakultě informatiky Masarykovy univerzity</a>, 
-    konkrétně v rámci skupiny <a href="http://www.fi.muni.cz/~xpelanek/proso/">PROSO</a>. 
+    konkrétně v rámci skupiny <a href="http://www.fi.muni.cz/adaptivelearning/">Adaptive Learning</a>. 
     </p>
     <p>
     Mezi další projekty této skupiny patří:
@@ -18,7 +21,16 @@
         <a href="http://tutor.fi.muni.cz/">Problem Solving Tutor</a>,
       </li>
       <li>
-        <a href="http://umimecesky.cz/">Umíme česky</a>.
+        <a href="http://umimecesky.cz/">Umíme česky</a>,
+      </li>
+      <li>
+        <a href="http://slepaanatomie.cz/">Slepá anatomie</a>,
+      </li>
+      <li>
+        <a href="http://matmat.cz/">MatMat</a>,
+      </li>
+      <li>
+        <a href="http://autoskolachytre.cz/">Autoškola chytře</a>.
       </li>
     </ul>
 
