--- a/main/geography/static/tpl/practice_tpl.html
+++ b/main/geography/static/tpl/practice_tpl.html
@@ -83,6 +83,11 @@
       <br>
       <span class="pull-right" >
         <a class="btn btn-lg btn-default" 
+           ng-show="user.username"
+           href="#/goals/" >
+          <i class="glyphicon glyphicon-screenshot"></i> {{'Osobní cíle' | trans }}
+        </a>
+        <a class="btn btn-lg btn-default" 
            href="#/refreshpractice/{{part}}/{{placeType}}" >
           <i class="glyphicon glyphicon-repeat"></i> {{'Znovu procvičovat' | trans }}
         </a>
