--- a/main/geography/static/tpl/signup_modal.html
+++ b/main/geography/static/tpl/signup_modal.html
@@ -62,7 +62,7 @@
     <alert ng-repeat="alert in alerts" type="{{alert.type}}"
       close="closeAlert($index)">{{alert.msg}}</alert>
     <button ng-disabled="loading" type="submit" class="btn btn-primary btn-block btn-lg">
-      {{ 'Registrovat se' }}
+      {{ 'Registrovat se' | trans }}
     </button>
   </form>
 </div>
