--- a/main/geography/static/tpl/view_tpl.html
+++ b/main/geography/static/tpl/view_tpl.html
@@ -2,8 +2,7 @@
 <div id="container">
   <div ng-hide="placesTypes || error" class="loading-indicator">
   </div>
-  <div ng-show="error" ng-bind="error" class="alert alert-danger">
-  </div>
+  <div ng-show="error" error-message ></div>
   <div ng-show="placesTypes.length" class="layers-tabs">
     <div class="tab col-sm-{{(typeCategories | filter:{'empty' : false}).length|colNum}}"
         ng-class="{'active' : !typeCat.hidden}"
