About page: Add a link to otevrenada.cz

--- a/main/geography/static/tpl/about.html
+++ b/main/geography/static/tpl/about.html
@@ -73,7 +73,14 @@
       <li><a href="http://en.wikipedia.org/wiki/Template:Flag">Wikipedia Flags</a> -
       vlaječky ostatních administrativnách celků </li>
     </ul>
-  </div>
+   </div>
+  <div class="works-div">
+    <h3>Ocenění</h3>
+    Aplikace byla oceněna v Soutěži 
+    <a href="http://www.otevrenadata.cz/">Společně otevíráme data</a>,
+     pořádané 
+    <a href="http://www.motejl.cz/">Fondem Otakara Motejla</a>.
+   </div>
 </div>
 <div class="clearfix"></div>
 </div>
