--- a/main/geography/static/tpl/practice_tpl.html
+++ b/main/geography/static/tpl/practice_tpl.html
@@ -58,7 +58,7 @@
     </div>
     <div ng-if="showSummary" class="inner-practice summary col-lg-12">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-{{user.username ? 6 : 12 }}">
           <div class="summary-progress progress" ng-show="summary != undefined">
             <div class="progress-bar progress-bar-learned" 
                  style="width: {{summary.correctlyAnsweredRatio | percent }};">
@@ -75,7 +75,7 @@
             <i class="flag-{{q.asked_code}}"></i> {{q.place}}
           </span>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6" ng-if="user.username" >
           <div class="level-progress-bar"></div>
           <div goal-progress map="{{part}}" place-type="{{placeType}}">
         </div>
