Fix goals on profile page

--- a/main/geography/static/tpl/user_tpl.html
+++ b/main/geography/static/tpl/user_tpl.html
@@ -73,7 +73,7 @@
           tooltip="{{'Adresa profilu' | trans}}"/>
 
       </div>
-      <div personal-goals></div>
+      <div personal-goals user="{{user.username}}"></div>
     </div>
   </div>
   <div class="clearfix"></div>
