Migrate Google authentication (in a hacky way)
https://developers.google.com/identity/protocols/OpenID2Migration

--- a/main/geography/static/tpl/login_modal.html
+++ b/main/geography/static/tpl/login_modal.html
@@ -7,7 +7,7 @@
 <div class="modal-body">
   <a class="btn btn-danger btn-lg btn-block"
     track-click="login"
-    href="/login/google/">
+    href="/login/google-oauth2/">
     <i class="social-google"></i> {{ "přes Google" | trans }}
   </a>
   <br>
